Colt1911 fov Test

--- a/configs/items/hud_fov_values/fov_custom_values.ltx
+++ b/configs/items/hud_fov_values/fov_custom_values.ltx
@@ -2,5 +2,8 @@
 --![wpn_*gun*_*scope*]
 --hud_fov = x
 
-[wpn_m1911]
-hud_fov         = 
+![wpn_colt1911]
+hud_fov         = 0.86
+
+![wpn_colt1911_n]
+hud_fov         = 0.86
