FOV script changes

--- a/configs/items/hud_fov_values/fov_custom_values.ltx
+++ b/configs/items/hud_fov_values/fov_custom_values.ltx
@@ -1,9 +1,8 @@
--- Add a new weapons custom fov value copying the below format to save the ADS fov through gamesaves
---![wpn_*gun*_*scope*]
---hud_fov = x
+[wpn_colt1911]
+iron = 0.86
 
-![wpn_colt1911]
-hud_fov         = 0.86
+[wpn_colt1911_n]
+iron = 0.86
 
-![wpn_colt1911_n]
-hud_fov         = 0.86
+[wpn_colt1911_duty]
+iron = 0.86
